# convergio-agents

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-agents/: Cargo.toml
crates/convergio-agents/src/: ext.rs  lib.rs  mcp_defs.rs  routes.rs  schema.rs  seed.rs  store.rs  types.rs
crates/convergio-agents/src/seed/: seed_biz.rs  seed_core.rs  seed_rest.rs  seed_tech.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md  ADR-007-agents-md-universal.md  ADR-009-agent-spawning-real-processes.md  ADR-029-multi-agent-safety.md  ADR-044-agents-role-split.md
