[workspace]
resolver = "2"
members = ["crates/convergio-agents"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Convergio-Community"
repository = "https://github.com/Roberdan/convergio-agents"

[workspace.dependencies]
# SDK dependencies
convergio-sdk = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-types = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-db = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-telemetry = { git = "https://github.com/Roberdan/convergio-sdk", tag = "v0.1.7" }
convergio-ipc = { git = "https://github.com/Roberdan/convergio-ipc", tag = "v0.1.4" }

# Common deps
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
