[package]
name = "convergio-agents"
description = "Agent catalog, org routing, model preferences"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
convergio-ipc = { workspace = true }
convergio-telemetry = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
