[package]
name = "convergio-agents"
description = "Agent catalog, org routing, model preferences"
version = "0.1.2"
edition.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
